--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,12 @@
 {{!-- The following component displays Ember's default welcome message. --}}
 {{!-- Feel free to remove this! --}}
 <h1>Ember Fastboot V2 Example</h1>
+<ul>
+{{#each this.lines as |a|}}
+  <li class="livvvvylivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvyyyyyyyyyyy">
+    <div class="wdivyyydivyydivyydivyydivyydivyydivyydivyydivyydivyydivyydivyydivyydivyydivyydivyydivyyyyyyyyyyyyyyyyyy"><p class="foobarfoobafoobafoobafoobafoobafoobafoobafoobafoobafoobafoobafoobafoobafoobafoobafoobafoobarrrrrrrrrrrrrrrrr">{{a}}</p></div>
+  </li>
+{{/each}}
+</ul>
 
 {{outlet}}
