Improvements around optional minifying. Fix bugs

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,7 @@
 {{!-- The following component displays Ember's default welcome message. --}}
 {{!-- Feel free to remove this! --}}
 <h1>Ember Fastboot V2 Example</h1>
+<h1>異體字字典</h1>
 <ul>
 {{#each this.lines as |a|}}
   <li class="livvvvylivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvlivvvvyyyyyyyyyyy">
